feat: update middlewares
