# api/docs/swagger.json
@@ -45,6 +45,13 @@
                         "schema": {
                             "$ref": "#/definitions/request.RegisterPixKeyRequest"
                         }
+                    },
+                    {
+                        "type": "string",
+                        "description": "Bearer token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -99,6 +106,13 @@
                         "description": "pix-key parameter",
                         "name": "key",
                         "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Bearer token",
+                        "name": "Authorization",
+                        "in": "header",
                         "required": true
                     }
                 ],
